# sanic

./: .gitignore  CLAUDE.md  CRITIQUE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  REVIEW.md  core_ideas.md  kernel_fusion_theory.md  scheduler_engine.md  streamability_engine.md  todo.md  vs_mlx.md  vs_tinygrad.md
.github/workflows/: ci.yml
examples/: derive.rs  direct_attention.rs  execute.rs  gpt2.rs  kernels.rs  llama3.rs  llama3_2.rs  llm.rs  mha.rs  mla.rs  mnist.rs  probe.rs  shakespeare.rs  trinity.rs  walkthrough.rs
examples/attic/: README.md  derive.rs  execute.rs  gpt2.rs  kernels.rs  llama3_2.rs  llm.rs  mha.rs  mla.rs  mnist.rs  probe.rs  shakespeare.rs  trinity.rs  walkthrough.rs
src/: analyze.rs  auto_schedule.rs  bpe.rs  carrier.rs  codegen.rs  codegen_cutile.rs  compile.rs  cost.rs  derive.rs  emit_cutile.rs  emit_metal.rs  emit_rust.rs  engine.rs  engine_ir.rs  experimental.rs  grad.rs  hir.rs  interp.rs  ir.rs  kernel_ir.rs  lib.rs  metal.rs  mir.rs  nn.rs  op.rs  partition.rs  plan.rs  runtime.rs  rustgen.rs  safetensors.rs  scalar.rs  schedule.rs  schedule_graph.rs  simplify.rs  stage1.rs  tensor.rs  verify.rs
tests/: attention_scheduling.rs  bpe.rs  compile.rs  completeness.rs  decode.rs  grad.rs  group.rs  irregular.rs  laws.rs  metal.rs  movement.rs  nn.rs  oracle.rs  reserved_cache.rs  rustgen.rs  schedule_exec.rs  scheduling.rs  simplify.rs  tensor.rs  theory_check.rs
tests/attic/: metal_legacy.rs
wiki/: README.md  slop.md
